<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hijos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fpuna.com.py.appis02.HijosActivity">

    <LinearLayout
        android:id="@+id/profile_section"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/prof_pic_"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/prof_pic"
            android:src="@drawable/profile_user" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/name_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/email"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_logout_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:visibility="gone"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hijosTitulo"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tabla_hijos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/tabla_hijos_row"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#969696"
                android:text="@string/idHijo"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#969696"
                android:text="@string/cedula"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#969696"
                android:text="@string/nombre"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#969696"
                android:text="@string/apellido"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#969696"
                android:text="@string/fecnac"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#969696"
                android:text="@string/sexo"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

        </TableRow>
    </TableLayout>
</LinearLayout>