<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vacunas_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fpuna.com.py.appis02.VacunasActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/apellido"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vacunasTitulo"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tabla_vacunas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#969696"
                android:text="@string/nombreVacuna"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#969696"
                android:text="@string/fechaAplicacion"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#969696"
                android:text="@string/aplicado"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>